[package]
name = "webnovel-crawler"
version = "0.1.0"
authors = ["Fatih Karahan <hseyin97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.11"
dialoguer = "0.6.2"
indicatif = "0.15.0"
failure = "0.1.8"
clap = "2.33"
log = "0.4"
pretty_env_logger = "0.4"
url = "2.1.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }